application/brennoflavio/libreddit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libreddit
  namespace: libreddit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libreddit
  template:
    metadata:
      labels:
        app: libreddit
    spec:
      containers:
        - name: libreddit
          image: ghcr.io/cycneuramus/containers@sha256:4b607fd58f2c170d9bbf073bfedbe570c5b6f29c7e72b3a2285e86d5c7f98af9
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 64Mi
          command: ["redlib"]
          args: ["-a", "0.0.0.0"]
