application/brennoflavio/libreddit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libreddit
  namespace: libreddit
spec:
  selector:
    app: libreddit
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: libreddit
  type: ClusterIP
