application/brennoflavio/libreddit/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libreddit
  namespace: libreddit
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-dns01
spec:
  ingressClassName: internal-nginx
  rules:
  - host: libreddit.home.brennoflavio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: libreddit
            port:
              number: 8080
  tls:
  - hosts:
    - libreddit.home.brennoflavio.com.br
    secretName: libreddit-tls
